--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                   <h3 class="h3 about-item-title">Contact Information:</h3>
 
                   <p class="about-item-text">
-                    You can get in touch with us through our website or social media handles. You can also email us at info@buzztheatre.com or call us at +91 9322136032.
+                    You can get in touch with us through our website or social media handles. You can also email us at info@buzztheatre.com or call us at +91 9322136032 , +91 7981738984 , +91 8074764354.
                   </p>
                 </div>
 
